--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Task Manager</h1>
+        <h1>Menager zadań</h1>
         <div class="task-form">
             <input id="taskInput" type="text" placeholder="Wpisz nazwę zadania" />
             <button id="addTaskButton">Dodaj zadanie</button>
